# UuPlayer

./: .gitignore  README.md
.github/workflows/: cli-automation.yml
src/: CMakeLists.txt  main.cc
src/controller/: CMakeLists.txt  controller_global.h  featured_featured_controller.cc  featured_featured_controller.h  featured_playlisthub_controller.cc  featured_playlisthub_controller.h  homepage_controller.cc  homepage_controller.h  lyricsview_controller.cc  lyricsview_controller.h  play_controller.cc  play_controller.h  playlistdetails_controller.cc  playlistdetails_controller.h
src/controller/model/: comment_item_model.cc  comment_item_model.h  local_media_item_model.cc  local_media_item_model.h  media_item_model.cc  media_item_model.h  mediaitem_filterproxy_model.cc  mediaitem_filterproxy_model.h  playlist_item_model.cc  playlist_item_model.h
src/engine/: CMakeLists.txt  audio_player.cc  audio_player.h  engine_global.h  media_item_model.cc  media_item_model.h  metadata_extractor.cpp  metadata_extractor.h
src/entities/: CMakeLists.txt  album_item.h  arist_item.h  comment_item.h  entities_global.h  lyric_types.h  media_item.h  playlist_item.h  types.h  user_item.h
src/gui/: CMakeLists.txt  image_provider.cc  image_provider.h  image_store.cc  image_store.h  theme_manager.cc  theme_manager.h  window_helper.cc  window_helper.h
src/gui/cpp/: UuWindow.cc  UuWindow.h
src/gui/qml/: Main.qml  MediaItem.qml  PlaylistDetailPage.qml
src/gui/qml/assets/: Icons.qml  Skins.qml
src/gui/qml/components/: qmldir  utils.js
src/gui/qml/components/button/: IconButton.qml  IconLabel.qml  TextIconButton.qml
src/gui/qml/components/buttons/: IconButton.qml
src/gui/qml/components/edit/: UTextEdit.qml
src/gui/qml/components/other/: CScrollBar.qml  CTab.qml  CatlistItem.qml  PlaylistItem.qml  RoundedImage.qml  RoundedRectangle.qml  UScrollBar.qml
src/gui/qml/leftNavigationPanel/: LeftNavigationPanel.qml  NavigateLogic.js  NavigationPanelItem.qml
src/gui/qml/lyricsView/: DesktopLyricWindow.qml  LyricItem.qml  LyricsViewPage.qml  RecordPlayer.qml
src/gui/qml/playbackBar/: AlbumDisplay.qml  PlaybackBar.qml  UuSlider.qml  VolumeControlButton.qml
src/gui/qml/playbacklist/: PlaybacklistItem.qml  PlaybacklistPage.qml
src/gui/qml/playlistDetail/: CommentItem.qml  MediaItem.qml  PlaylistDetailPage.qml  SortHeaderItem.qml  SubscriberItem.qml
src/gui/qml/stackPages/: CloudMusicSelectedPage.qml  CommunityPage.qml  DownloadManagePage.qml  FavorMusicPage.qml  PodcastPage.qml  RecentPlayPage.qml
src/gui/qml/stackPages/cloudMusicSelectedPage/: CTab.qml  CatlistDialog.qml  CloudMusicSelectedPage.qml  NavigateLogic.js  PlaylistSquareSubpage.qml  RankingSubpage.qml  SelectiveSubpage.qml  SingerSubPage.qml  SingerSubpage.qml  TabsBar.qml  VipSubpage.qml
src/gui/qml/stackPages/localMusicPage/: LocalMusicPage.qml  SearchBox.qml  SelectLocalDirsDialog.qml  SortHeaderItem.qml
src/gui/qml/stackPages/skinPage/: SkinItem.qml  SkinPage.qml
src/gui/qml/titleBar/: LoginDialog.qml  TitleBar.qml
src/network/: CMakeLists.txt  api_network.h  basic_network.cc  basic_network.h  comments_fetch_network.cc  comments_fetch_network.h  homepage_network.cc  homepage_network.h  local_song_network.cc  local_song_network.h  login_network.cc  login_network.h  network_global.h  playlist_network.cc  playlist_network.h  playlist_tracks_network.cc  playlist_tracks_network.h  playlistalbum_detail_network.cc  playlistalbum_detail_network.h  playlistalbum_detailnetwork.cc  playlistalbum_detailnetwork.h  recommended_playlist_network.cc  recommended_playlist_network.h  song_lyric_network.cc  song_lyric_network.h  song_network.cc  song_network.h  song_url_network.cc  song_url_network.h
src/service/: CMakeLists.txt  comments_fetch_service.cc  comments_fetch_service.h  homepage_service.cc  homepage_service.h  local_song_service.cc  local_song_service.cpp  local_song_service.h  login_service.cc  login_service.h  play_service.cc  play_service.h  playlist_service.cc  playlist_service.h  playlist_tracks_service.cc  playlist_tracks_service.h  playlistalbum_detail_service.cc  playlistalbum_detail_service.h  playservice.cc  recommended_playlist_service.cc  recommended_playlist_service.h  service_global.h  service_manager.cc  service_manager.h  song_lyric_service.cc  song_lyric_service.h  song_service.cc  song_service.cpp  song_service.h  song_url_service.cc  song_url_service.h
src/service/entities/: album_data.h  arist_data.h  comment_data.h  local_media_item.h  media_item.cc  media_item.h  playlist_item.h  user_item.h
src/service/model/: comment_data.cc  comment_data.h  comment_item_model.cc  comment_item_model.h  local_media_item_model.cc  local_media_item_model.h  media_item_model.cc  media_item_model.h  mediaitem_filterproxy_model.cc  mediaitem_filterproxy_model.h  playlist_detail.cc  playlist_detail.h  playlist_item_model.cc  playlist_item_model.h
src/test/: CMakeLists.txt  test_qstring.cc  test_qstring.h  test_service.cc  test_service.h
src/ui_base/: CMakeLists.txt  CTab.qml  CarouselView.qml  CatlistItem.qml  IconButton.qml  PlaylistItem.qml  RoundedImage.qml  SearchBar.qml  Toast.qml  UScrollBar.qml  UTextEdit.qml  Utils.js
